clusters/building-blocks/media/apps/immich/app/immich-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: media
  labels:
    app.kubernetes.io/name: immich
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`photos.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: immich
          namespace: media
          passHostHeader: true
          port: 2283
          scheme: http
    - kind: Rule
      match: Host(`photos.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: immich
          namespace: media
          passHostHeader: true
          port: 2283
          scheme: http
